# bettermake

./: .gitattributes  Makefile  Makefile.am  Makefile.in  README  bettermake  bettermake.cpp  buildconf.yml  command.cpp  config.h.in  config.status  configure  configure.ac  header.cpp  main.mk  makefile  meson.build  mk-command  mk-detail  mk-header  path.mk  readme.md
.app/: config
.deps/: bettermake.Po  command.Po  detail.Po  gen-build.Po  header.Po
.github/workflows/: c-cpp.yml
.hubcap/: config.yml
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
src/: bettermake.cpp  bool.h  command-fn.c  command.cpp  command.h  config.h  cyaml-defs.h  cyaml-types.h  detail.cpp  gen-build.c  gen-build.h  meson.build  strutils.h  targets.c  targets.h
src/.deps/: bettermake.Po  command-fn.Po  command.Po  detail.Po  gen-build.Po  header.Po  targets.Po
